# pythonProject23

./: .sample_env  README.md  catalog_fixture.json  command.txt  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: post_list.html
blog/templates/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  create_group.py
catalog/migrations/: 0001_initial.py  0002_initial.py
catalog/tamplates/: product_list.html
catalog/templates/catalog/: base.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
mailapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailapp/templates/: recipient_mail_list.html
static/: Responsive images.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: CSU.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
