[tool.poetry]
name = "pythonproject23"
version = "0.1.0"
description = ""
authors = ["Nikita <nikkitos.pershin.2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dep.dependencies]
django = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
